--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    <!-- Copyright (c) 2023 Satoshi Moriya
+    Released under the MIT license
+    https://opensource.org/licenses/mit-license.php -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
