いらないものを削除 #185

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,15 @@
     Released under the MIT license
     https://opensource.org/licenses/mit-license.php -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="時間管理ができるWebアプリケーション"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Work Time Management App</title>
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <title>Time Management App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
